# roninx

./: main.py  requirements.txt
config/: identity.json  tor_identity.json
sail_core/: Cargo.toml  test1.py
server/: main.py  test_server.py
solana-ica/: README.md  package-lock.json
src/: banner.py  client.py  crypto_trading.py  menu.py  solana_manager.py  status_bar.py  tor_manager.py
src/menus/: agent_menu.py  irc_menu.py  privacy_crypto_handler.py  privacy_menus.py  settings_menu.py  solana_menu.py  tor_irc_menu.py  tor_settings_menu.py
src/network/: __init__.py  network_manager.py  secure_storage.py
wallets/: wallet.json
