[package]
name = "sail_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "sail_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module"] }
ndarray = "0.16.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0.11"
rand = "0.8"
